unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/Oracle_AR_Customer_Address__c.object-meta.xml
<CustomObject>
    <description>Customer Addresses from Oracle AR</description>
    <label>Oracle AR Customer Address</label>
    <nameField>
        <label>Record Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oracle AR Customer Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>