unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Master Detail Relationship to Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AR_Customer_Addresss</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>