unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/AR_CUST_ACCT_SITE_ID__c.field-meta.xml
<CustomField>
    <fullName>AR_CUST_ACCT_SITE_ID__c</fullName>
    <description>Customer Account Site ID field from Oracle AR (sames as CUST_ACCT_SITE_ID column from HZ_CUST_ACCT_SITES_ALL table)</description>
    <label>AR_CUST_ACCT_SITE_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>