unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/AR_CUST_SITE_ADDRESS1__c.field-meta.xml
<CustomField>
    <fullName>AR_CUST_SITE_ADDRESS1__c</fullName>
    <description>Customer Site Location Address 1 field from Oracle AR (sames as ADDRESS1 column from HZ_LOCATIONS table)</description>
    <label>Address 1</label>
    <length>240</length>
    <type>Text</type>
</CustomField>