unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/AR_CUST_SITE_ADDRESS3__c.field-meta.xml
<CustomField>
    <fullName>AR_CUST_SITE_ADDRESS3__c</fullName>
    <description>Customer Site Location Address 3 field from Oracle AR (sames as ADDRESS3 column from HZ_LOCATIONS table)</description>
    <label>Address 3</label>
    <length>240</length>
    <type>Text</type>
</CustomField>