unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/AR_CUST_SITE_CITY__c.field-meta.xml
<CustomField>
    <fullName>AR_CUST_SITE_CITY__c</fullName>
    <description>Customer Site Location City field from Oracle AR (sames as CITY column from HZ_LOCATIONS table)</description>
    <label>City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>