unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/AR_CUST_SITE_COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>AR_CUST_SITE_COUNTRY__c</fullName>
    <description>Customer Site Location Country field from Oracle AR (sames as COUNTRY column from HZ_LOCATIONS table)</description>
    <label>Country</label>
    <length>60</length>
    <type>Text</type>
</CustomField>