unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/AR_CUST_SITE_CREATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>AR_CUST_SITE_CREATION_DATE__c</fullName>
    <description>Customer Account Site Creation Date field from Oracle AR (sames as CREATION_DATE column from HZ_CUST_ACCT_SITES_ALL table)</description>
    <label>AR_CUST_SITE_CREATION_DATE</label>
    <type>DateTime</type>
</CustomField>