unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/AR_CUST_SITE_POSTAL_CODE__c.field-meta.xml
<CustomField>
    <fullName>AR_CUST_SITE_POSTAL_CODE__c</fullName>
    <description>Customer Site Location Postal Code field from Oracle AR (sames as POSTAL_CODE column from HZ_LOCATIONS table)</description>
    <label>Postal Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>