unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/AR_CUST_SITE_PROVINCE__c.field-meta.xml
<CustomField>
    <fullName>AR_CUST_SITE_PROVINCE__c</fullName>
    <description>Customer Site Location Province field from Oracle AR (sames as PROVINCE column from HZ_LOCATIONS table)</description>
    <label>AR_CUST_SITE_PROVINCE</label>
    <length>60</length>
    <type>Text</type>
</CustomField>