unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/AR_CUST_SITE_STATE__c.field-meta.xml
<CustomField>
    <fullName>AR_CUST_SITE_STATE__c</fullName>
    <description>Customer Site Location State field from Oracle AR (sames as STATE column from HZ_LOCATIONS table)</description>
    <label>State</label>
    <length>60</length>
    <type>Text</type>
</CustomField>