unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/AR_CUST_SITE_STATUS__c.field-meta.xml
<CustomField>
    <fullName>AR_CUST_SITE_STATUS__c</fullName>
    <description>Customer Account Site Creation Date field from Oracle AR (sames as STATUS column from HZ_CUST_ACCT_SITES_ALL table)</description>
    <label>Customer Site Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>