unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/AR_PARTY_SITE_LOC_CREATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>AR_PARTY_SITE_LOC_CREATION_DATE__c</fullName>
    <description>Customer Party Site Location Creation Date field from Oracle AR (sames as CREATION_DATE column from HZ_LOCATIONS table)</description>
    <label>AR_PARTY_SITE_LOC_CREATION_DATE</label>
    <type>DateTime</type>
</CustomField>