unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/AR_PARTY_SITE_LOC_ID__c.field-meta.xml
<CustomField>
    <fullName>AR_PARTY_SITE_LOC_ID__c</fullName>
    <description>Customer Party Site Location ID field from Oracle AR (sames as LOCATION_ID column from HZ_LOCATIONS table or LOCATION_ID column from HZ_PARTY_SITES table)</description>
    <label>AR_PARTY_SITE_LOC_ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>