unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/AR_PARTY_SITE_LOC_LAST_UPDATE_DATE__c.field-meta.xml
<CustomField>
    <fullName>AR_PARTY_SITE_LOC_LAST_UPDATE_DATE__c</fullName>
    <description>Customer Party Site Location Last Update Date field from Oracle AR (sames as LAST_UPDATE_DATE olumn from HZ_LOCATIONS table)</description>
    <label>AR_PARTY_SITE_LOC_LAST_UPDATE_DATE</label>
    <type>DateTime</type>
</CustomField>