unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/AR_PARTY_SITE_USE_PRIMARY_FLAG__c.field-meta.xml
<CustomField>
    <fullName>AR_PARTY_SITE_USE_PRIMARY_FLAG__c</fullName>
    <description>Customer Party Site Use Status field from Oracle AR (same as PRIMARY_FLAG column from HZ_CUST_SITE_USES_ALL table)</description>
    <label>Site Use Primary</label>
    <length>1</length>
    <type>Text</type>
</CustomField>