unpackaged/main/default/objects/Oracle_AR_Customer_Address__c/fields/AR_PARTY_SITE_USE_STATUS__c.field-meta.xml
<CustomField>
    <fullName>AR_PARTY_SITE_USE_STATUS__c</fullName>
    <description>Customer Party Site Use Status field from Oracle AR (same as STATUS column from HZ_CUST_SITE_USES_ALL table)</description>
    <label>Party Site Use Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>